--- a/src/Syle.css
+++ b/src/Syle.css
@@ -554,6 +554,14 @@ video {
   --tw-contain-style:  ;
 }
 
+.flex {
+  display: flex;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
 .p-8 {
   padding: 2rem;
 }
